test-cases/valid/accept/multiple_arguments.ul
void main() {
    foo (1, 2, 3);
}

void foo(int i, int j, int k) {
    print i;
    print j;
    print k;
}
