test-cases/invalid/missing_semicolon.ul
void main() {
    int i;

    // This line is missing a semicolon
    i = 10

    print i;
}